# 20-lesson-hw

./: pyproject.toml
tests/: utils.py
tests/API/: test_catfact_ninja.py  test_reqres.py
